2009-09-30  Jaroslav Hajek  <highegg@gmail.com>

	* general/arrayfun.m: Simplify.

2009-09-30  John W. Eaton  <jwe@octave.org>

	* mkdoc: Work on list of file names instead of a directory.
	* Makefile.in (ALL_M_FILES): Don't strip directories.
	Also search build directory if it is different from $(srcdir).
	Pass $(ALL_M_FILES) to mkdoc.

2009-09-30  Michael D. Godfrey  <godfrey@isl.stanford.edu>

	* plot/clabel.m: Spelling fix.
	* plot/newplot.m: Update docstring.

2009-09-28  John W. Eaton  <jwe@octave.org>

	* general/sortrows.m: Also use old algorithm for sparse matrices.

2009-09-21  Jaroslav Hajek  <highegg@gmail.com>

	* set/union.m: Fix docstring.
	* set/setxor.m: Fix docstring.

2009-09-16  Jaroslav Hajek  <highegg@gmail.com>

	* general/randperm.m: Remove.
	* general/Makefile.in: Update.

2009-09-15  John W. Eaton  <jwe@octave.org>

	* confiugre.ac: Rename from configure.in
	* Makefile.in: Rename all instances of configure.in to
	configure.ac.

2009-09-11  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/Makefile.in: Include __doglegm__.m.

2009-09-11  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminunc.m: Simplify damped BFGS calculation.

2009-09-09  Tatsuro Matsuoka <tmacchant@yahoo.co.jp>

	* plot/gnuplot_drawnow.m: Avoid flickering windows by avoding
	'set multiplot' / 'unset multiplot' for gnuplot's windows and
	wxt terminals.

2009-09-06  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/__dogleg__.m: Revert to revision 22c8272af34b.
	* optimization/__doglegm__.m: New source.
	* optimization/fminunc.m: Use it.

2009-09-08  John W. Eaton  <jwe@octave.org>

	* io/dlmwrite.m: Fix typo.

2009-09-06  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fsolve.m: Change initial TR step strategy.
	* optimization/fminunc.m: Change initial TR step strategy.

2009-09-08  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminunc.m: Correct extra output params handling.

2009-09-06  Jaroslav Hajek  <highegg@gmail.com>
